Fixing overflow problem on the sidebar

--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -6,6 +6,7 @@
   z-index: 100;
   padding: 0;
   box-shadow: 1px 0 0 rgba(0, 0, 0, 0.1);
+  overflow: hidden;
 }
 
 .sidebarSticky {
